fixed: last message a little hidden behind quill editor

--- a/src/app/components/channel/channel.component.scss
+++ b/src/app/components/channel/channel.component.scss
@@ -49,7 +49,7 @@
 
 .scroll-wrapper {
     overflow-y: scroll;
-    height: calc(100vh - 326px);
+    height: calc(100vh - 350px);
 
     ::-webkit-scrollbar {
         display: none;
